--- a/src/views/css/styles.css
+++ b/src/views/css/styles.css
@@ -66,7 +66,8 @@
     --titulo-do-input: #000;
     --imagem-seta: url('../assets/seta_baixo_branca.png');
     --imagem-lixeira: url('../assets/lixeiraBranca.png');
-    --imagem-lixeira-aberta: url('../assets/lixeiraBrancaAberta.png')
+    --imagem-lixeira-aberta: url('../assets/lixeiraBrancaAberta.png');
+    --cinza: var(--athena-col-terciaria)
 }
 
 body {
